# ais-compact

./: CHANGELOG.md  Cargo.toml  build.rs  flake.nix
.changes/: v0.1.0.md  v0.1.1.md  v0.2.0.md  v0.3.0.md
.changes/unreleased/: Added-20250819-113643.yaml  Added-20250819-140731.yaml  Added-20250906-121546.yaml  Changed-20250819-114746.yaml  Changed-20250819-133945.yaml
proto/ais/v1/: spec.proto
src/: armor.rs  lib.rs  main.rs  proto.rs  sentence.rs
