[package]
name = "ais-compact"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bit-struct = { version = "0.3.2", default-features = false }
either = "1.15.0"
protobuf = { version = "3.7.2", features = ["with-bytes"] }
winnow = "0.7.12"

[build-dependencies]
protobuf-codegen = "3.7.2"
protoc-bin-vendored = "3.2.0"
